<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_around_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_betweed_title_and_content"
                android:text="@string/text_increment"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/default_text_title_normal" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_rice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rice"
                    android:inputType="text"
                    android:textSize="@dimen/default_text_body_normal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_price"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/default_text_body_normal" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_area_heigth"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                style="@style/style_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_save"
                style="@style/style_button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>