<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/background_rice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/BodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sticky_rice_new" />

            <View
                style="@style/HorizontalDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_padding_normal"
                android:layout_marginTop="@dimen/default_margin_padding_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/text_price"
                    android:textSize="@dimen/default_text_body_normal" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ed_sticky_rice_new"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_weight"
                        android:inputType="number"
                        android:textSize="@dimen/default_text_body_normal" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/bath"
                    android:textSize="@dimen/default_text_body_normal" />

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp" />


            <Button style="@style/style_button_save" />
        </LinearLayout>

        <LinearLayout
            style="@style/background_rice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/BodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sticky_rice_old" />

            <View
                style="@style/HorizontalDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_padding_normal"
                android:layout_marginTop="@dimen/default_margin_padding_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/text_price"
                    android:textSize="@dimen/default_text_body_normal" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ed_sticky_rice_old"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_weight"
                        android:inputType="number"
                        android:textSize="@dimen/default_text_body_normal" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/bath"
                    android:textSize="@dimen/default_text_body_normal" />

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp" />


            <Button style="@style/style_button_save" />
        </LinearLayout>

        <LinearLayout
            style="@style/background_rice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/BodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jasmine_rice" />

            <View
                style="@style/HorizontalDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_padding_normal"
                android:layout_marginTop="@dimen/default_margin_padding_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/text_price"
                    android:textSize="@dimen/default_text_body_normal" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ed_jasmine_rice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_weight"
                        android:inputType="number"
                        android:textSize="@dimen/default_text_body_normal" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/bath"
                    android:textSize="@dimen/default_text_body_normal" />

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp" />


            <Button style="@style/style_button_save" />
        </LinearLayout>

        <LinearLayout
            style="@style/background_rice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/BodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rice_old" />

            <View
                style="@style/HorizontalDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_padding_normal"
                android:layout_marginTop="@dimen/default_margin_padding_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/text_price"
                    android:textSize="@dimen/default_text_body_normal" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ed_rice_old"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_weight"
                        android:inputType="number"
                        android:textSize="@dimen/default_text_body_normal" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/bath"
                    android:textSize="@dimen/default_text_body_normal" />

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp" />


            <Button style="@style/style_button_save" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>