<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/default_margin_padding_normal"
    android:layout_marginLeft="@dimen/default_margin_padding_extra_large"
    android:layout_marginRight="@dimen/default_margin_padding_extra_large"
    android:layout_marginTop="@dimen/default_margin_padding_normal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_padding_small"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_margin_padding_extra_small"
            android:text="date"
            android:textSize="@dimen/default_text_header_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_weight"
                android:textSize="@dimen/default_text_body_large" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_price"
                android:textSize="@dimen/default_text_body_large" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="จ่าย"
                android:textSize="@dimen/default_text_body_large" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_amount"
                android:textSize="@dimen/default_text_body_large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_weight"
                android:textSize="@dimen/default_text_body_large" />

            <TextView
                android:id="@+id/text_name_rice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_price"
                android:textSize="@dimen/default_text_body_large" />

            <TextView
                android:id="@+id/text_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="จ่ายทั้งหมด"
                android:textSize="@dimen/default_text_body_large" />

            <TextView
                android:id="@+id/text_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_amount"
                android:textSize="@dimen/default_text_body_large" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>